# XCG

./: .editorconfig  .gitignore  CODE_OF_CONDUCT.md  README.md  X39s Code Generator.sln  XCG.sln  documentation.html  documentation.yaml  example.xcg  notepad++.xml  solution.sln  solution.sln.DotSettings  xcg.sln  xcg.xml
CodeGenTest/: CodeGenTest.vcxproj  CodeGenTest.vcxproj.filters  main.c  output.c  output.h
X39s Code Generator/: Generator.c  Generator.h  Parser.c  Parser.c.old  Parser.h  Parser.h.old  X39s Code Generator.vcxproj  X39s Code Generator.vcxproj.filters  astnode.c  ebnf.txt  frontend.h  main.c  makefile  output.c  output.h
XCG/: Generator.c  Generator.h  Parser.c  Parser.h  X39s Code Generator.vcxproj  astnode.h  ebnf.txt  main.c  output.c
examples/: calculator.xcg  easyscript.xcg  example.ys  example.ys.txt  test.easyscript.txt  yaoosl.attribute.xcg  yaoosl.expression.xcg  yaoosl.higher-structure.xcg  yaoosl.messages.xcg  yaoosl.other.xcg  yaoosl.template.xcg  yaoosl.xcg
generator-test/: CMakeLists.txt
generator-test/generator-test/: CMakeLists.txt  generator-test.cpp  generator-test.hpp  main.cpp  main.hpp  parser.cpp  parser.hpp
sample/: easyscript.xcg  test.easyscript  yaoosl.contract.xcg  yaoosl.control-structure.xcg  yaoosl.pragma.xcg  yaoosl.xcg
source/: ESeverity.cs  FatalException.cs  IEnumerableExtensions.cs  IGenerator.cs  Program.cs  PublicExtensions.cs  xcg.csproj
source/Generators/: CppGenerator.cs
source/Parsing/: AnyCharacter.cs  CharacterRange.cs  Comment.cs  Diagnostic.cs  EActiveScope.cs  EMode.cs  (+17 more)
xcg/: xcg.csproj
(+419 files in other folders)
